[package]
name = "tags"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"

chrono = "0.4.39"
config = { version = "0.15.8", features = ["toml"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
url = { version = "2.5.4", features = ["serde"] }

refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
deadpool-postgres = "0.14.1"
uuid = { version = "1.14.0", features = ["v7", "fast-rng"] }

rsa = { version = "0.9.7", features = ["pem"] }
ed25519-dalek = {version = "2.1.1", features = ["pkcs8", "rand_core", "serde", "pem"]}
sha2 = "0.10.8"
base64 = "0.22.1"
rand = "0.8.5"
